--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container">
         <p class="description">Enter the bill amount and cash received to get minimum number of notes to return</p>
         <label for="bill-amount">Bill amount:</label>
-        <input type="text" class="bill-amount"/>
+        <input type="number" class="bill-amount"/>
         <button class="next">Next</button>
         <div class="after-next-button" style="display: none;">
             <label for="cash-received">Cash Received</label>
-            <input type="text" class="cash-received">
+            <input type="number" class="cash-received">
             <button class="submit">check</button>
             <p class="message"></p>
             <table class="change-table">
