--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="heading">Cash Registry</h1>
+    <h1 class="heading">Cash Registry <span>💰</span></h1>
     <div class="container">
         <p class="description">Enter the bill amount and cash received to get minimum number of notes to return</p>
         <label for="bill-amount">Bill amount:</label>
