--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="next">Next</button>
         <div class="after-next-button" style="display: none;">
             <label for="cash-received">Cash Received</label>
-            <input type="number" class="cash-received">
+            <input type="number" class="cash-received"/>
             <button class="submit">check</button>
             <p class="message"></p>
             <table class="change-table">
