changes in output table

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="number" class="bill-amount"/>
         <button class="next">Next</button>
         <div class="after-next-button" style="display: none;">
-            <label for="cash-received">Cash Received</label>
+            <label for="cash-received">Cash Received:</label>
             <input type="number" class="cash-received"/>
             <button class="submit">check</button>
             <p class="message"></p>
@@ -23,13 +23,13 @@
                 <caption>Return change</caption>
                 <tr>
                     <th>No of Notes</th>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
-                    <td class="no-of-notes"></td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
+                    <td class="no-of-notes">0</td>
                 </tr>
                 <tr class="row-two">
                     <th>Notes</th>
